Minor fixes in product UI

--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -56,7 +56,7 @@
         {{{body}}}
     </main>
 
-    <footer class="content section make-it-semi">
+    <footer class="content section make-it-semi make-it-small">
         <p>&copy; 2025 Shopnhour</p>
     </footer>
 
