--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
 </head>
 <body>
-    <h2 class="section make-it-left make-it-white-back make-it-dark make-it-rounded-top">Log in</h2>
+    
 
     <div class="make-it-white make-it-center section" id="message">
     </div>
@@ -15,15 +15,16 @@
     <div class="grid-container-3c-by-1r">
         <div></div>
         <div class="box make-it-semi-back">
-
+            <h2 class="make-it-left make-it-dark make-it-rounded-top make-it-normal">Log in</h2>
             <div class="">
+                
                 <form class="make-it-center" id="loginForm">
-                    <div class="make-it-white  section" for="email">
+                    <div class="make-it-dark  section" for="email">
                         <p class="make-it-dark">E-mail</p>
                         <input class="input " name="email" type="email" required />
                     </div>
 
-                    <div class="make-it-white  section " for="password">
+                    <div class="make-it-dark  section " for="password">
                         <p class="make-it-dark">Password</p>
                         <input class="input " name="password" type="password" required />
                     </div>
