--- a/src/views/productsStatic.handlebars
+++ b/src/views/productsStatic.handlebars
@@ -75,11 +75,11 @@
 
     <!-- Product List -->
     <section class="section">
-        <div class="container">
+        <div class="">
             <div class="columns is-multiline is-centered">
                 {{#if products.length}}
                     {{#each products}}
-                        <div class="column is-12-mobile is-3-desktop">
+                        <div class="column is-12-mobile is-2-desktop">
                             <div class="make-it-rounded-top card-title-container make-it-white-back make-it-left">
                                 <div>
                                     {{this.title}}
