Ticketing system semi implemented. Need an endpoint to retrieve all tickets.

--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -5,8 +5,6 @@
     <title>Cart</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="dark" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-    <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
     <h2 class="section make-it-left make-it-white-back make-it-dark make-it-rounded-top make-it-normal">
@@ -61,7 +59,7 @@
         {{else}}
             <p class="make-it-white make-it-center">Your cart is empty.</p>
             <p class="make-it-white make-it-center">
-                Go to <a class="make-it-white" href="/products"><b>/products</b></a> to start adding.
+                Go to <a class="button is-small" href="/products"><b>/products</b></a> to start adding.
             </p>
         {{/if}}
     </section>
